[package]
name = "notes"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
flate2 = "1.0.28"
hashbrown = { version = "0.14.2", features = ["serde"] }
libsw = "3.3.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
