[package]
name = "notes"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
flate2 = "1.0.28"
hashbrown = { version = "0.14.2", features = ["serde"] }
hyphenation = "0.8.4"
libsw = "3.3.0"
owo-colors = "3.5.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
textwrap = { version = "0.16.0", features = ["smawk", "hyphenation", "terminal_size"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
