[package]
name = "notes"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chronograf = "0.1.0"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
flate2 = "1.0.28"
hashbrown = { version = "0.14.3", features = ["serde"] }
hyphenation = "0.8.4"
owo-colors = "3.5.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
textwrap = { version = "0.16.1", features = [
    "smawk",
    "hyphenation",
    "terminal_size",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
